[gd_scene load_steps=24 format=2]

[ext_resource path="res://resources/fonts/default_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://quiz_game/Player.gd" type="Script" id=2]
[ext_resource path="res://quiz_game/RunnerManager.gd" type="Script" id=3]
[ext_resource path="res://resources/fonts/tex_bolditalic.tres" type="DynamicFont" id=4]
[ext_resource path="res://quiz_game/Lane.tscn" type="PackedScene" id=5]
[ext_resource path="res://quiz_game/Lanes.gd" type="Script" id=6]
[ext_resource path="res://resources/assets/Man.png" type="Texture" id=7]
[ext_resource path="res://resources/fonts/tex_bold.tres" type="DynamicFont" id=8]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 200, 400 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 32.5 )

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "Run"
loop = true

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 0, 192, 80, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 80, 192, 80, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 160, 192, 80, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 0, 128, 80, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 80, 128, 80, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 160, 128, 80, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 240, 128, 80, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 0, 256, 80, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 80, 256, 80, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 160, 256, 80, 64 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "run2",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run1",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "run3",
"speed": 5.0
} ]

[node name="Runner" type="Node2D"]
script = ExtResource( 3 )

[node name="Game" type="Node2D" parent="."]

[node name="Lanes" type="Node2D" parent="Game"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Game/Lanes"]
visible = false
margin_left = -157.0
margin_top = -287.0
margin_right = 500.0
margin_bottom = -127.0
color = Color( 0.196078, 0.168627, 0.0980392, 1 )

[node name="Label" type="RichTextLabel" parent="Game/Lanes"]
visible = false
margin_left = -146.0
margin_top = -283.0
margin_right = 497.0
margin_bottom = -128.0
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 1 )
scroll_active = false

[node name="Lane1" parent="Game/Lanes" instance=ExtResource( 5 )]
position = Vector2( -447, -84 )

[node name="Lane2" parent="Game/Lanes" instance=ExtResource( 5 )]
position = Vector2( -447, 42 )

[node name="Lane3" parent="Game/Lanes" instance=ExtResource( 5 )]
position = Vector2( -447, 166 )

[node name="ObstacleTimer" type="Timer" parent="Game/Lanes"]
wait_time = 0.6
autostart = true

[node name="ObstacleTrash" type="Area2D" parent="Game/Lanes"]
position = Vector2( -800, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Lanes/ObstacleTrash"]
shape = SubResource( 4 )

[node name="Player" type="KinematicBody2D" parent="Game" groups=["Player"]]
position = Vector2( -600, 0 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Player"]
shape = SubResource( 1 )

[node name="MoveTween" type="Tween" parent="Game/Player"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game/Player"]
autoplay = "Run"
playback_speed = 5.0
anims/RESET = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Game/Player"]
scale = Vector2( 1.1625, 1.14062 )
frames = SubResource( 15 )
animation = "run1"
frame = 1
speed_scale = 2.4
playing = true

[node name="QuestionTimer" type="Timer" parent="Game"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ScoreLabel" type="Label" parent="Game"]
margin_left = -487.0
margin_top = -275.0
margin_right = -361.0
margin_bottom = -216.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="EndGameTimer" type="Timer" parent="Game"]
wait_time = 3.0

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="EndScreen" type="Control" parent="Camera"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="Camera/EndScreen"]
margin_left = -59.0
margin_top = 187.0
margin_right = 55.0
margin_bottom = 252.0
text = "Back"

[node name="ColorRect" type="ColorRect" parent="Camera/EndScreen"]
margin_left = -446.0
margin_top = -92.0
margin_right = 439.0
margin_bottom = 166.0
color = Color( 0.196078, 0.168627, 0.0980392, 1 )

[node name="QuizResult" type="Label" parent="Camera/EndScreen/ColorRect"]
margin_left = 505.0
margin_top = 96.0
margin_right = 809.0
margin_bottom = 199.0
custom_fonts/font = ExtResource( 8 )

[node name="Score" type="Label" parent="Camera/EndScreen/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 106.0
margin_top = 96.0
margin_right = -583.0
margin_bottom = -67.0
custom_fonts/font = ExtResource( 8 )

[node name="Label" type="Label" parent="Camera/EndScreen"]
margin_left = -116.0
margin_top = -221.0
margin_right = 117.0
margin_bottom = -156.0
custom_fonts/font = ExtResource( 4 )
text = "Quiz Over!"

[connection signal="chose_answer" from="." to="Game/Lanes" method="_on_Runner_chose_answer"]
[connection signal="show_question" from="." to="Game/Lanes" method="_on_Runner_show_question"]
[connection signal="scored" from="Game/Lanes" to="." method="scored"]
[connection signal="timeout" from="Game/Lanes/ObstacleTimer" to="Game/Lanes" method="spawn_obstacles"]
[connection signal="area_entered" from="Game/Lanes/ObstacleTrash" to="Game/Lanes" method="_on_ObstacleTrash_area_entered"]
[connection signal="answer_question" from="Game/Player" to="." method="_on_Player_answer_question"]
[connection signal="moving" from="Game/Player" to="." method="_on_Player_moving"]
[connection signal="player_hit" from="Game/Player" to="Game/Lanes" method="_on_Player_player_hit"]
[connection signal="tween_all_completed" from="Game/Player/MoveTween" to="Game/Player" method="_on_MoveTween_tween_all_completed"]
[connection signal="timeout" from="Game/QuestionTimer" to="." method="_on_QuestionTimer_timeout"]
[connection signal="timeout" from="Game/EndGameTimer" to="." method="_on_EndGameTimer_timeout"]
[connection signal="button_down" from="Camera/EndScreen/Button" to="." method="_on_Button_button_down"]
